# AlphaX-HR-Shield

alphax_hr_shield/: MANIFEST.in  README.md  license.txt  pyproject.toml  requirements.txt
alphax_hr_shield/alphax_hr_shield/: api.py  data.py  hooks.py  install.py  modules.txt  patches.txt  tasks.py
alphax_hr_shield/alphax_hr_shield/alphax_hr_shield/doctype/alphax_alert_rule/: alphax_alert_rule.json  alphax_alert_rule.py
alphax_hr_shield/alphax_hr_shield/alphax_hr_shield/doctype/alphax_doc_threshold/: alphax_doc_threshold.json  alphax_doc_threshold.py
alphax_hr_shield/alphax_hr_shield/alphax_hr_shield/doctype/alphax_field_map/: alphax_field_map.json  alphax_field_map.py
alphax_hr_shield/alphax_hr_shield/alphax_hr_shield/doctype/alphax_gcc_nationality/: alphax_gcc_nationality.json  alphax_gcc_nationality.py
alphax_hr_shield/alphax_hr_shield/alphax_hr_shield/doctype/alphax_gosi_rate/: alphax_gosi_rate.json  alphax_gosi_rate.py
alphax_hr_shield/alphax_hr_shield/alphax_hr_shield/doctype/alphax_gosi_settings/: alphax_gosi_settings.json  alphax_gosi_settings.py
alphax_hr_shield/alphax_hr_shield/alphax_hr_shield/doctype/alphax_gov_connection/: alphax_gov_connection.json  alphax_gov_connection.py
alphax_hr_shield/alphax_hr_shield/core/: compliance.py  esb.py  gosi.py  nitaqat.py  saudization.py  workforce.py
alphax_hr_shield/alphax_hr_shield/integrations/: __init__.py  base.py  gosi_portal.py  mudad.py  qiwa.py
alphax_hr_shield/alphax_hr_shield/public/css/: alphax_hr.css
alphax_hr_shield/alphax_hr_shield/public/js/: alphax_hr.js
(+15 files in other folders)
