[project]
name = "alphax_hr_shield"
authors = [{ name = "AlphaX", email = "hr@alphax.example" }]
description = "AlphaX HR Shield — KSA HR compliance suite for Frappe/ERPNext (document expiry, Saudization, ESB, GOSI, government-portal integration)."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<16.0.0"
